Fix broken index page link

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,9 +47,10 @@ body {
 
 h3 {
 	color: #4F5256;
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-weight: 300;
 	letter-spacing: 1.5px;
+	line-height: 1rem;
 	margin-right:0;
 	/*font-family: 'Poppins', sans-serif;*/
 	font-family: 'Work Sans', sans-serif;
